# consolemenu

./: README.md  consolemenu.py  setup.cfg
src/: consolemenu.py
