[metadata]
name = consolemenu
version = 0.0.1
author = KvantPro
author_email = random1qwe@gmail.com
description = Console menu for python 3
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/KvantPro/consolemenu/
project_urls =
    Bug Tracker = https://github.com/KvantPro/consolemenu/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
